--- a/scss/login.scss
+++ b/scss/login.scss
@@ -554,6 +554,7 @@
                 background: none;
                 border: none;
                 top: 53px;
+                z-index: 9;
                 @media(max-width:1679px)
                 {
                     top: 50px;
