--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -967,3 +967,50 @@
         }
     }
 }
+
+.delete-confirm{
+    .btn-otr {
+        margin-top: 19px;
+
+        .btn-black {
+            width: 48%;
+            min-width: auto;
+
+            @media(max-width:575px) {
+                width: 45%;
+            }
+
+            @media(max-width:355px) {
+                width: 100%;
+            }
+
+        }
+
+        .btn-cancel {
+            border-radius: 24px;
+            border: 1px solid #000;
+            background: #FFF;
+            width: 48%;
+            height: 48px;
+            margin-right: 10px;
+            font-size: 15px;
+
+            @media(max-width:1679px) {
+                font-size: 14px;
+            }
+
+            @media(max-width:575px) {
+                height: 45px;
+                width: 45%;
+            }
+
+            @media(max-width:355px) {
+                width: 100%;
+            }
+        }
+    }
+}
+
+.claim-reward-modal{
+    
+}
