--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -809,3 +809,9 @@
         }
     }
 }
+
+.card-section-outer .top-block .progress-bar-section .progress-bar-block{
+    .progress{
+        height: 8px;
+    }
+}
