--- a/scss/common.scss
+++ b/scss/common.scss
@@ -751,3 +751,9 @@ button{
 .progress-bar{
     background-color: #0dad4d!important;
 }
+
+// btn loader
+.spinner-border{
+    width: 25px;
+    height: 25px;
+}
