--- a/scss/login.scss
+++ b/scss/login.scss
@@ -98,6 +98,7 @@
                     height: 60px;
                     margin-top:15px;
                     color: #fff !important;
+                    -webkit-text-fill-color: #fff !important;
                     padding: 7px 44px 7px 56px;
                     box-shadow: none !important;
                     &::placeholder
@@ -156,6 +157,9 @@
                 height: 60px;
                 font-weight: 500;
                 font-size: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 @media(max-width:1679px)
                 {
                     margin-top: 30px;
@@ -497,6 +501,9 @@
                         padding: 15px 15px;
                         min-width: 155px;
                         border-radius: 50px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
                         @media(max-width:575px)
                         {
                             width: 100%;
