--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -332,6 +332,7 @@
             display: flex;
             margin-top: 8px;
             margin-bottom: 12px;
+            align-items: center;
             .progress-bar-block{
                 flex: 1 1 auto;
             }
