--- a/css/modal.css
+++ b/css/modal.css
@@ -56,6 +56,9 @@
       display: inline-flex;
       align-items: center;
       justify-content: center; }
+      .custom-modal .btn-cover-modal .btn .spinner-border {
+        width: 20px;
+        height: 20px; }
       .custom-modal .btn-cover-modal .btn:hover {
         opacity: .8; }
       @media (max-width: 1679px) {
