--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -62,6 +62,10 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
+            .spinner-border{
+                width: 20px;
+                height: 20px;
+            }
             &:hover{
                 opacity: .8;
             }
