--- a/css/table.css
+++ b/css/table.css
@@ -220,6 +220,9 @@
 
   .th-w-105 {
     width: 105px; } }
+@media (min-width: 992px) {
+  .th-w-min-160 {
+    width: 70px; } }
 .td-text-nowrap {
   white-space: nowrap; }
 
