--- a/scss/table.scss
+++ b/scss/table.scss
@@ -274,6 +274,11 @@
         width: 105px;
     }
 }
+@media(min-width: 992px){
+    .th-w-min-160{
+        width: 70px;
+    }
+}
 .td-text-nowrap{
     white-space: nowrap;
 }
