--- a/css/common.css
+++ b/css/common.css
@@ -97,7 +97,7 @@ button {
   box-shadow: none;
   border: none; }
 
-select, input {
+select, input, textarea {
   outline: none;
   box-shadow: none; }
 
