--- a/scss/common.scss
+++ b/scss/common.scss
@@ -106,7 +106,7 @@ button{
     box-shadow: none;
     border: none;
 }
-select, input, textarea{
+select, input{
     outline: none;
     box-shadow: none;
 }
