--- a/scss/login.scss
+++ b/scss/login.scss
@@ -328,6 +328,10 @@
 }
 .fgt-modal
 {
+    .alert-msg-cover .alert-msg
+    {
+        top: 104% !important;
+    }
     .modal-dialog {
         max-width:600px !important;
         font-family:$font-primary;
@@ -447,6 +451,10 @@
                         color: #333;
                         padding-left: 53px;
                         box-shadow: none !important;
+                        @media(max-width:1679px)
+                        {
+                            font-size: 15px;
+                        }
                         @media(max-width:991px)
                         {
                             height: 50px;
@@ -459,7 +467,8 @@
                         left: 22px;
                         @media(max-width:991px)
                         {
-                            top: 48.8px;
+                            top: 49px;
+                            left: 18px;
                         }
                     }
                 }
