--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -59,13 +59,17 @@
                 .props-name
                 {
                     background: #657181;
-                    display: inline-block;
+                    display: inline-flex;
+                    align-items: center;
                     padding: 6px 17px;
                     border-radius: 50px;
                     color:  $primary-light;
                     margin-bottom: 13px;
                     font-size: 14px;
                     font-weight:500;
+                    img{
+                        margin-right: 10px;
+                    }
                     @media(max-width:1679px)
                     {
                         font-size: 12px;
