--- a/css/side-nav.css
+++ b/css/side-nav.css
@@ -11,293 +11,245 @@
 /* placeholder mixin */
 .nav-block {
   width: 300px;
-  background: #292D32;
+  background: #2E4276;
   box-shadow: 0px 4px 112px 0px rgba(0, 0, 0, 0.08);
   border-radius: 0 16px 0 0;
-  transition: 0.3s;
-}
-.nav-block .nav-block-inner {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-}
-.nav-block .nav-logo-wrapper {
-  display: flex;
-  justify-content: space-between;
-  padding: 15px 15px 15px 35px;
-  align-items: center;
-  flex-wrap: wrap;
-  min-height: 85px;
-}
-.nav-block .nav-logo-wrapper .nav-logo {
-  padding: 10px 0;
-  display: flex;
-  align-items: center;
-}
-.nav-block .nav-logo-wrapper .nav-logo .logo-txt {
-  padding-left: 5px;
-}
-.nav-block .nav-logo-wrapper .toggle-btn-block {
-  padding: 10px 0;
-}
-.nav-block .nav-logo-wrapper .nav-toggle-btn {
-  transition: 0.3s;
-  position: relative;
-  width: 32px;
-  height: 32px;
-  flex-shrink: 0;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2px;
-  border-radius: 50%;
-  border: none;
-  background: #393F47;
-}
-.nav-block .nav-logo-wrapper .nav-toggle-btn .line-cover {
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 14px;
-  height: 12px;
-  flex-shrink: 0;
-}
-.nav-block .nav-logo-wrapper .nav-toggle-btn .nav-line {
-  display: inline-flex;
-  width: 12px;
-  background-color: #fff;
-  height: 2px;
-  border-radius: 10px;
-  transition: 0.3s;
-  line-height: 0;
-  flex-shrink: 0;
-}
-.nav-block .nav-logo-wrapper .nav-toggle-btn .nav-line:nth-child(2) {
-  width: 8px;
-}
-.nav-block .nav-logo-wrapper .nav-toggle-btn:hover .nav-line {
-  width: 8px;
-}
-.nav-block .nav-logo-wrapper .nav-toggle-btn:hover .nav-line:nth-child(2) {
-  width: 12px;
-}
-.nav-block .navbar-collapse-block {
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  background-color: #292D32;
-}
-.nav-block .navbar-collapse-block .navbar-ul {
-  list-style: none;
-  padding: 0 10px;
-  padding-top: 30px;
-}
-.nav-block .navbar-collapse-block .navbar-ul .nav-item {
-  margin-bottom: 12px;
-}
-.nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link {
-  position: relative;
-  display: flex;
-  align-items: center;
-  color: #fff;
-  font-size: 16px;
-  padding: 8px 15px;
-  padding-left: 28px;
-  min-height: 40px;
-  transition: 0.3s;
-  z-index: 1;
-  white-space: nowrap;
-}
-.nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link::after {
-  z-index: -2;
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 0;
-  height: 100%;
-  top: 0;
-  transition: 0.3s ease-out;
-  background: #393F47;
-  border-radius: 20px;
-}
-.nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-label {
-  display: inline-block;
-  padding-left: 20px;
-}
-.nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-icon {
-  display: inline-block;
-  width: 20px;
-  line-height: 0;
-}
-.nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link:hover::after, .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link.active::after {
-  width: 100%;
-}
-.nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link.active {
-  font-weight: 600;
-}
-.nav-block .navbar-collapse-block .mob-nav-btn-block {
-  width: 100%;
-  padding: 25px;
-}
-@media (min-width: 767px) {
-  .nav-block .navbar-collapse-block .mob-nav-btn-block {
-    display: none;
-  }
-}
-.nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn-cover {
-  position: relative;
-}
-.nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn-cover .wallet-btn-copy {
-  right: 20px;
-}
-.nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn, .nav-block .navbar-collapse-block .mob-nav-btn-block .login-btn {
-  border-radius: 40px;
-  min-height: 52px;
-  padding: 12px 15px;
-  width: 100%;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 15px;
-}
-.nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn {
-  color: #fff;
-  background-color: #292D32;
-  border: solid 1px #fff;
-}
-.nav-block .navbar-collapse-block .mob-nav-btn-block .login-btn {
-  margin-top: 15px;
-  color: #292D32;
-  background-color: #fff;
-}
-.nav-block .navbar-collapse-block .mob-nav-btn-block .login-btn img {
-  margin-left: 25px;
-}
-.nav-block .navbar-collapse-block .wallet-btn-block-mob {
-  width: 100%;
-  padding: 25px 20px 20px;
-  margin-top: auto;
-}
-@media (min-width: 767px) {
-  .nav-block .navbar-collapse-block .wallet-btn-block-mob {
-    display: none;
-  }
-}
-.nav-block .navbar-collapse-block .wallet-btn-block-mob .wallet-btn-mob {
-  width: 100%;
-  text-align: center;
-  background-color: #fff;
-  border-radius: 8px;
-  border: 1px solid #000;
-  padding: 15px;
-  text-decoration: none;
-  display: inline-block;
-  color: #292D32;
-  transition: 0.3s;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.nav-block .navbar-collapse-block .wallet-btn-block-mob .wallet-btn-mob:hover {
-  opacity: 0.8;
-}
-.nav-block .nav-footer-block {
-  padding: 10px 15px 50px 30px;
-  margin-top: auto;
-  margin-bottom: 0;
-}
-.nav-block .nav-footer-block .nav-footer-logo {
-  margin-bottom: 15px;
-}
-.nav-block .nav-footer-block .nav-footer-logo a {
-  display: inline-block;
-}
-.nav-block .nav-footer-block .welcome-msg {
-  margin-bottom: 20px;
-  font-size: 16px;
-  color: #fff;
-}
-.nav-block .nav-footer-block .welcome-msg span {
-  text-transform: capitalize;
-  font-weight: 600;
-}
-.nav-block .nav-footer-block .nav-soc-block .nav-soc {
-  display: inline-block;
-  min-width: 20px;
-  margin-right: 20px;
-  transition: 0.3s;
-}
-.nav-block .nav-footer-block .nav-soc-block .nav-soc:last-child {
-  margin-right: 0;
-}
-.nav-block .nav-footer-block .nav-soc-block .nav-soc:hover {
-  transform: translateY(-5px);
-}
+  transition: .3s; }
+  .nav-block .nav-block-inner {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%; }
+  .nav-block .nav-logo-wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 15px 15px 35px;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 85px; }
+    .nav-block .nav-logo-wrapper .nav-logo {
+      padding: 10px 0;
+      display: flex;
+      align-items: center; }
+      .nav-block .nav-logo-wrapper .nav-logo .logo-txt {
+        padding-left: 5px; }
+    .nav-block .nav-logo-wrapper .toggle-btn-block {
+      padding: 10px 0; }
+    .nav-block .nav-logo-wrapper .nav-toggle-btn {
+      transition: .3s;
+      position: relative;
+      width: 32px;
+      height: 32px;
+      flex-shrink: 0;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2px;
+      border-radius: 50%;
+      border: none;
+      background: #393F47; }
+      .nav-block .nav-logo-wrapper .nav-toggle-btn .line-cover {
+        display: inline-flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 14px;
+        height: 12px;
+        flex-shrink: 0; }
+      .nav-block .nav-logo-wrapper .nav-toggle-btn .nav-line {
+        display: inline-flex;
+        width: 12px;
+        background-color: #fff;
+        height: 2px;
+        border-radius: 10px;
+        transition: .3s;
+        line-height: 0;
+        flex-shrink: 0; }
+        .nav-block .nav-logo-wrapper .nav-toggle-btn .nav-line:nth-child(2) {
+          width: 8px; }
+      .nav-block .nav-logo-wrapper .nav-toggle-btn:hover .nav-line {
+        width: 8px; }
+        .nav-block .nav-logo-wrapper .nav-toggle-btn:hover .nav-line:nth-child(2) {
+          width: 12px; }
+  .nav-block .navbar-collapse-block {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    background-color: #2E4276; }
+    .nav-block .navbar-collapse-block .navbar-ul {
+      list-style: none;
+      padding: 0 10px;
+      padding-top: 30px; }
+      .nav-block .navbar-collapse-block .navbar-ul .nav-item {
+        margin-bottom: 12px; }
+        .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link {
+          position: relative;
+          display: flex;
+          align-items: center;
+          color: #fff;
+          font-size: 16px;
+          padding: 8px 15px;
+          padding-left: 28px;
+          min-height: 40px;
+          transition: .3s;
+          z-index: 1;
+          white-space: nowrap; }
+          .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link::after {
+            z-index: -2;
+            content: '';
+            position: absolute;
+            left: 0;
+            width: 0;
+            height: 100%;
+            top: 0;
+            transition: .3s ease-out;
+            background: #393F47;
+            border-radius: 20px; }
+          .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-label {
+            display: inline-block;
+            padding-left: 20px; }
+          .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-icon {
+            display: inline-block;
+            width: 20px;
+            line-height: 0; }
+          .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link:hover::after, .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link.active::after {
+            width: 100%; }
+          .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link.active {
+            font-weight: 600; }
+    .nav-block .navbar-collapse-block .mob-nav-btn-block {
+      width: 100%;
+      padding: 25px; }
+      @media (min-width: 767px) {
+        .nav-block .navbar-collapse-block .mob-nav-btn-block {
+          display: none; } }
+      .nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn-cover {
+        position: relative; }
+        .nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn-cover .wallet-btn-copy {
+          right: 20px; }
+      .nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn, .nav-block .navbar-collapse-block .mob-nav-btn-block .login-btn {
+        border-radius: 40px;
+        min-height: 52px;
+        padding: 12px 15px;
+        width: 100%;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 15px; }
+      .nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn {
+        color: #fff;
+        background-color: #2E4276;
+        border: solid 1px #fff; }
+      .nav-block .navbar-collapse-block .mob-nav-btn-block .login-btn {
+        margin-top: 15px;
+        color: #2E4276;
+        background-color: #fff; }
+        .nav-block .navbar-collapse-block .mob-nav-btn-block .login-btn img {
+          margin-left: 25px; }
+    .nav-block .navbar-collapse-block .wallet-btn-block-mob {
+      width: 100%;
+      padding: 25px 20px 20px;
+      margin-top: auto; }
+      @media (min-width: 767px) {
+        .nav-block .navbar-collapse-block .wallet-btn-block-mob {
+          display: none; } }
+      .nav-block .navbar-collapse-block .wallet-btn-block-mob .wallet-btn-mob {
+        width: 100%;
+        text-align: center;
+        background-color: #fff;
+        border-radius: 8px;
+        border: 1px solid #000;
+        padding: 15px;
+        text-decoration: none;
+        display: inline-block;
+        color: #2E4276;
+        transition: .3s;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis; }
+        .nav-block .navbar-collapse-block .wallet-btn-block-mob .wallet-btn-mob:hover {
+          opacity: .8; }
+  .nav-block .nav-footer-block {
+    padding: 10px 15px 50px 30px;
+    margin-top: auto;
+    margin-bottom: 0; }
+    .nav-block .nav-footer-block .nav-footer-logo {
+      margin-bottom: 15px; }
+      .nav-block .nav-footer-block .nav-footer-logo a {
+        display: inline-block; }
+    .nav-block .nav-footer-block .welcome-msg {
+      margin-bottom: 20px;
+      font-size: 16px;
+      color: #fff; }
+      .nav-block .nav-footer-block .welcome-msg span {
+        text-transform: capitalize;
+        font-weight: 600; }
+    .nav-block .nav-footer-block .nav-soc-block .nav-soc {
+      display: inline-block;
+      min-width: 20px;
+      margin-right: 20px;
+      transition: .3s; }
+      .nav-block .nav-footer-block .nav-soc-block .nav-soc:last-child {
+        margin-right: 0; }
+      .nav-block .nav-footer-block .nav-soc-block .nav-soc:hover {
+        transform: translateY(-5px); }
 
 .nav-collapse .nav-block {
   width: 95px;
-  max-width: 95px;
-}
+  max-width: 95px; }
 .nav-collapse .nav-block .nav-logo-wrapper .nav-logo .logo-txt, .nav-collapse .nav-footer-block,
 .nav-collapse .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-label {
-  display: none;
-}
+  display: none; }
 .nav-collapse .nav-block .nav-logo-wrapper {
   flex-direction: column;
-  align-items: flex-start;
-}
+  align-items: flex-start; }
 
 @media (max-width: 1679px) {
   .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-label {
-    font-size: 15px;
-  }
+    font-size: 15px; }
+
   .nav-block {
-    width: 270px;
-  }
+    width: 270px; }
+
   .body-wrapper .content-block-outer {
-    max-width: calc(100% - 270px);
-  }
+    max-width: calc(100% - 270px); }
+
   .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link {
-    padding-left: 23px;
-  }
+    padding-left: 23px; }
+
   .nav-block .nav-logo-wrapper {
     padding: 5px 15px 5px 30px;
-    min-height: 70px;
-  }
-}
+    min-height: 70px; } }
 @media (max-width: 991px) {
   .nav-block .nav-footer-block {
     padding-top: 35px;
-    display: block;
-  }
+    display: block; }
+
   .nav-block .nav-logo-wrapper .nav-toggle-btn {
-    border: solid 1px transparent;
-  }
+    border: solid 1px transparent; }
+
   .nav-collapse .nav-block .nav-logo-wrapper .nav-toggle-btn {
-    border-color: #fff;
-  }
+    border-color: #fff; }
+
   .body-wrapper .content-block-outer {
     padding-top: 70px;
     max-width: 100%;
-    width: 100%;
-  }
+    width: 100%; }
+
   .body-wrapper .nav-block .nav-logo-wrapper {
     width: 100%;
-    background-color: #292D32;
+    background-color: #2E4276;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1000;
-    border-bottom: solid 1px #E3E4F3;
-  }
+    border-bottom: solid 1px #E3E4F3; }
+
   .nav-collapse .nav-block .nav-logo-wrapper {
     flex-direction: row;
-    align-items: center;
-  }
+    align-items: center; }
+
   .nav-collapse .nav-block .nav-logo-wrapper .nav-logo .logo-txt, .nav-collapse .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-label {
-    display: block !important;
-  }
+    display: block !important; }
+
   .navbar-collapse-block {
     position: fixed;
     top: 60px;
@@ -305,65 +257,57 @@
     background-color: #fff;
     left: 0;
     top: -100vh;
-    transition: 0.3s;
+    transition: .3s;
     z-index: 9;
     height: 100vh;
     padding-top: 70px;
-    overflow-y: auto;
-  }
+    overflow-y: auto; }
+
   .nav-collapse .navbar-collapse-block {
-    top: 0;
-  }
+    top: 0; }
+
   .nav-block .nav-logo-wrapper .nav-toggle-btn {
     border-radius: 43px;
     width: 43px;
-    height: 43px;
-  }
+    height: 43px; }
+
   .nav-block .nav-logo-wrapper .nav-toggle-btn .nav-line {
-    width: 16px !important;
-  }
+    width: 16px !important; }
+
   .nav-collapse .nav-block .nav-logo-wrapper .nav-toggle-btn .nav-line:nth-child(1) {
     -webkit-transform: translateY(7px) rotate(45deg);
     -ms-transform: translateY(7px) rotate(45deg);
     -o-transform: translateY(7px) rotate(45deg);
-    transform: translateY(7px) rotate(45deg);
-  }
+    transform: translateY(7px) rotate(45deg); }
   .nav-collapse .nav-block .nav-logo-wrapper .nav-toggle-btn .nav-line:nth-child(3) {
     -webkit-transform: translateY(-7px) rotate(-45deg);
     -ms-transform: translateY(-7px) rotate(-45deg);
     -o-transform: translateY(-7px) rotate(-45deg);
-    transform: translateY(-7px) rotate(-45deg);
-  }
+    transform: translateY(-7px) rotate(-45deg); }
   .nav-collapse .nav-block .nav-logo-wrapper .nav-toggle-btn .nav-line:nth-child(2) {
-    opacity: 0;
-  }
+    opacity: 0; }
+
   .nav-block .nav-logo-wrapper .nav-toggle-btn .line-cover {
     width: 100%;
     align-items: center;
-    height: 15px;
-  }
+    height: 15px; }
+
   .nav-block .nav-logo-wrapper {
-    padding: 5px 15px;
-  }
-}
+    padding: 5px 15px; } }
 @media (max-width: 767px) {
   .nav-collapse .navbar-collapse-block {
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
-  }
-}
+    overflow-y: auto; } }
 @media (max-width: 579px) {
   .nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn, .nav-block .navbar-collapse-block .mob-nav-btn-block .login-btn {
-    min-height: 48px;
-  }
+    min-height: 48px; }
+
   .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link {
-    padding-left: 20px;
-  }
+    padding-left: 20px; }
+
   .nav-block .navbar-collapse-block .wallet-btn-block-mob .wallet-btn-mob {
     padding: 12px;
-    font-size: 15px;
-  }
-}
+    font-size: 15px; } }
 
 /*# sourceMappingURL=side-nav.css.map */
