--- a/scss/common.scss
+++ b/scss/common.scss
@@ -106,9 +106,9 @@ button{
     box-shadow: none;
     border: none;
 }
-select, input{
+select, input, textarea{
     outline: none;
-    box-shadow: none;
+    box-shadow: none !important;
 }
 .btn-check:checked+.btn, .btn:first-child:active, :not(.btn-check)+.btn:active {
     color: inherit;
