--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,8 +1,12 @@
 // Brand colors
 //––––––––––––––––––––––––––––––––––––––––––––––––––
-$primary-dark: #292D32;
+// $primary-dark: #292D32;
+$primary-dark: #2E4276;
 $primary-light: #fff;
 $green: #0DAD4D;
+$text-primary-dark: #2E4276;
+$text-primary-light: #8393BA;
+$primary-blue: #2966FF;
 
 // Font stack
 //––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -19,7 +23,8 @@ $border-grey:#e3e4f3;
 $label-txt-blue:#697F9B;
 $dark-black:#000;
 $success-green:#0DAD4D;
-$border-grey-1:#B4BFCD;
+// $border-grey-1:#B4BFCD;
+$border-grey-1:#B6C3E5;
 $btn-border-green:#7DE0A5;
 $light-green:#E7FFF0;
 $btn-green-text:#0DAD4D;
